# vulkan_boilerplate

./: CMakeLists.txt  README.md
include/: utils.h
shaders/: basic.frag  basic.vert  compile.sh  vert.spv
src/: app.cpp  utils.cpp
vulkansdk-macos-1.1.106.0/Documentation/: getting_started_macos.html  getting_started_macos.md  release_notes-macos.html
